<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="file_provider" translatable="false">com.jdots.browser.fileprovider.standard</string>
    <string name="application_name">Clear Browser</string>
    <string name="short_name">Clear Browser</string>
    <string name="android_asset_path">en</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="javascript_enabled">JavaScript enabled</string>
    <string name="javascript_disabled">JavaScript disabled</string>
    <string name="first_party_cookies_enabled">First-Party Cookies enabled</string>
    <string name="first_party_cookies_disabled">First-Party Cookies disabled</string>
    <string name="third_party_cookies_enabled">Third-Party Cookies enabled</string>
    <string name="third_party_cookies_disabled">Third-Party Cookies disabled</string>
    <string name="dom_storage_enabled">DOM Storage enabled</string>
    <string name="dom_storage_disabled">DOM Storage disabled</string>
    <string name="form_data_enabled">Form Data enabled</string>
    <string name="form_data_disabled">Form Data disabled</string>
    <string name="cookies_deleted">Cookies deleted</string>
    <string name="dom_storage_deleted">DOM Storage deleted</string>
    <string name="form_data_deleted">Form Data deleted</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="unrecognized_url">Unrecognized URL:</string>
    <string name="add_tab">Add tab</string>
    <string name="close_tab">Close Tab</string>
    <string name="new_tab">New tab</string>
    <string name="loading">Loading…</string>
    <string name="error">Error:</string>
    <string name="apply">Apply</string>
    <string name="loading_easylist">Loading EasyList</string>
    <string name="loading_easyprivacy">Loading EasyPrivacy</string>
    <string name="clear_and_exit">Clear and Exit</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="history">History</string>
    <string name="open">Open</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="import_export">Import/Export</string>
        <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="save_text">Save Text</string>
    <string name="save_image">Save Image</string>
    <string name="file_name">File name</string>
    <string name="move_to_folder">Move to Folder</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="requests">Requests</string>
    <string name="domains">Domains</string>
    <string name="file_does_not_exist">The file does not exist.</string>
    <string name="browse">Browse</string>
    <string name="storage_permission_explanation">Accessing files in public directories requires the storage permission. Otherwise, only app directories will work.</string>
    <string name="copy_string">Copy</string>
    <string name="clear">Clear</string>
    <string name="privacy">Privacy</string>
        <string name="javascript_preference">JavaScript</string>
        <string name="javascript_preference_summary">JavaScript allows websites to run programs (scripts) on the device.</string>
        <string name="first_party_cookies_preference">First-party cookies</string>
        <string name="first_party_cookies_preference_summary">Because first-party cookies are an app level setting, when the active tab has cookies enabled,
            any network requests made in the background by other tabs will also include any stored cookies for their domains.
            Android KitKat (version 4.4.x) does not differentiate between first and third-party cookies and will enable them both with this setting.</string>
        <string name="third_party_cookies_preference">Third-party cookies</string>
        <string name="third_party_cookies_summary">This setting requires Android Lollipop (version 5.0) or higher.  It has no effect if first-party cookies are disabled.</string>
        <string name="dom_storage_preference">DOM storage</string>
        <string name="dom_storage_preference_summary">JavaScript must be enabled for DOM storage to function.</string>
        <string name="save_form_data_preference">Form data</string>
        <string name="save_form_data_preference_summary">Saved form data can auto-populate fields on websites.</string>
        <string name="user_agent">User agent</string>
        <string name="custom_user_agent">Custom user agent</string>
        <string name="incognito_mode">Incognito Mode</string>
        <string name="incognito_mode_summary">Clear the history and cache after each webpage finishes loading. In Incognito Mode, back closes the tab (or the app if there is only one tab).</string>
        <string name="do_not_track">Do Not Track</string>
        <string name="do_not_track_summary">Send the Do Not Track header, which politely suggests that web servers not track this browser.</string>
        <string name="allow_screenshots">Allow screenshots</string>
    <string name="allow_screenshots_summary">Allow screenshots, video recording, and viewing on non-secure displays. Changing this setting will restart Clear Browser.</string>
    <string name="blocklists">Blocklists</string>
        <string name="easylist">EasyList</string>
        <string name="easylist_summary">Main ad blocking list.</string>
        <string name="easyprivacy">EasyPrivacy</string>
        <string name="easyprivacy_summary">Main tracker blocking list.</string>
        <string name="fanboys_annoyance_list">Fanboy’s annoyance list</string>
        <string name="fanboys_annoyance_list_summary">Block annoying popups and links.  Includes Fanboy’s social blocking lists.</string>
        <string name="fanboys_social_blocking_list">Fanboy’s social blocking list</string>
        <string name="fanboys_social_blocking_list_summary">Blocks third-party social media content.</string>
        <string name="ultralist">UltraList</string>
        <string name="ultralist_summary">UltraList blocks ads that EasyList doesn’t because doing so can break websites.</string>
        <string name="ultraprivacy">UltraPrivacy</string>
        <string name="ultraprivacy_summary">UltraPrivacy blocks trackers that EasyPrivacy doesn’t because doing so can break websites.</string>
        <string name="block_all_third_party_requests">Block all third-party requests</string>
        <string name="block_all_third_party_requests_summary">Blocking all third-party requests increases privacy, but it breaks many websites.</string>
    <string name="url_modification">URL Modification</string>
        <string name="google_analytics">Google Analytics</string>
        <string name="google_analytics_summary">Remove “?utm_” and “&amp;utm_” and anything after them from URLs.</string>
        <string name="facebook_click_ids">Facebook Click IDs</string>
        <string name="facebook_click_ids_summary">Remove “?fbclid=”, “&amp;fbclid=”, “?fbadid=”, and “&amp;fbadid=” and anything after them from URLs.</string>
        <string name="twitter_amp_redirects">Twitter AMP redirects</string>
        <string name="twitter_amp_redirects_summary">Remove “?amp=1” and anything after it from URLs.</string>
    <string name="search">Search</string>
        <string name="search_custom_url">Search custom URL</string>
    <string name="proxy">Proxy</string>
        <string name="proxy_custom_url">Proxy custom URL</string>
    <string name="full_screen">Full Screen</string>
        <string name="full_screen_browsing_mode">Full screen browsing mode</string>
        <string name="full_screen_browsing_mode_summary">Double-tap to toggle full screen browsing mode.</string>
        <string name="hide_app_bar">Hide the app bar</string>
        <string name="hide_app_bar_summary">Hide the app bar that contains the URL.</string>
    <string name="clear_everything">Clear everything</string>
        <string name="clear_everything_summary">Clears cookies, DOM storage, form data, the logcat, and WebView’s cache.  Then manually deletes the entire “app_webview” and “cache” directories.</string>
        <string name="clear_cookies_preference">Clear cookies</string>
        <string name="clear_cookies_summary">Clears first and third-party cookies.</string>
        <string name="clear_dom_storage_preference">Clear DOM storage</string>
        <string name="clear_dom_storage_summary">Clears DOM storage.</string>
        <string name="clear_form_data_preference">Clear form data</string>
        <string name="clear_form_data_summary">Clears form data.</string>
        <string name="clear_logcat_preference">Clear logcat</string>
        <string name="clear_logcat_summary">Clears the logcat.</string>
        <string name="clear_cache">Clear cache</string>
        <string name="clear_cache_summary">Clears WebView’s cache.</string>
    <string name="general">General</string>
        <string name="homepage">Homepage</string>
        <string name="download_location">Download location</string>
        <string name="download_custom_location">Download custom location</string>
        <string name="font_size_preference">Font size</string>
        <string name="open_intents_in_new_tab">Open intents in new tab</string>
        <string name="open_intents_in_new_tab_summary">Intents are links sent from other apps.</string>
        <string name="swipe_to_refresh">Swipe to refresh</string>
        <string name="swipe_to_refresh_summary">Some websites don’t work well if swipe to refresh is enabled.</string>
        <string name="scroll_app_bar">Scroll the app bar</string>
        <string name="scroll_app_bar_summary">Scroll the app bar off the top of the screen when the WebView scrolls down.</string>
        <string name="display_additional_app_bar_icons">Display additional app bar icons</string>
        <string name="display_additional_app_bar_icons_summary">Display icons in the app bar for refreshing the WebView and, if there is room, for opening the bookmarks drawer and toggling cookies.</string>
        <string name="app_theme">App theme</string>
        <string name="webview_theme">WebView theme</string>
        <string name="wide_viewport_preference">Wide viewport</string>
        <string name="wide_viewport_summary">Using a wide viewport makes some webpages layout more like the desktop site.</string>
        <string name="display_webpage_images">Display webpage images</string>
        <string name="display_webpage_images_summary">Disable to conserve bandwidth.</string>
    <string name="app_theme_default_value" translatable="false">System default</string>
    <string name="custom_user_agent_default_value" translatable="false">ClearBrowser/1.0</string>
    <string name="download_custom_location_default_value" translatable="false" />
    <string name="download_location_default_value" translatable="false">Auto</string>
    <string name="font_size_default_value" translatable="false">100</string>
    <string name="homepage_default_value" translatable="false">https://duckduckgo.com/</string>
    <string name="proxy_custom_url_default_value" translatable="false">http://localhost:8118</string>
    <string name="proxy_default_value" translatable="false">None</string>
    <string name="search_custom_url_default_value" translatable="false" />
    <string name="search_default_value" translatable="false">https://duckduckgo.com/?q=</string>
    <string name="user_agent_default_value" translatable="false">Clear Browser</string>
    <string name="webview_theme_default_value" translatable="false">System default</string>
</resources>