<?xml version="1.0" encoding="utf-8"?>

<!--
  //

  //

 //



   -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="privacy"
        android:title="@string/privacy" >

        <SwitchPreference
            android:defaultValue="false"
            android:key="javascript"
            android:summary="@string/javascript_preference_summary"
            android:title="@string/javascript_preference" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="first_party_cookies"
            android:summary="@string/first_party_cookies_preference_summary"
            android:title="@string/first_party_cookies_preference" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="third_party_cookies"
            android:summary="@string/third_party_cookies_summary"
            android:title="@string/third_party_cookies_preference" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="dom_storage"
            android:summary="@string/dom_storage_preference_summary"
            android:title="@string/dom_storage_preference" />

        <!-- Save form data can be removed once the minimum API >= 26. -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="save_form_data"
            android:summary="@string/save_form_data_preference_summary"
            android:title="@string/save_form_data_preference" />

        <ListPreference
            android:defaultValue="@string/user_agent_default_value"
            android:entries="@array/translated_user_agent_names"
            android:entryValues="@array/user_agent_names"
            android:icon="?attr/userAgentIcon"
            android:key="user_agent"
            android:title="@string/user_agent" />

        <!-- android:inputType="textVisiblePassword" sets the keyboard to have a dedicated number row.-->
        <EditTextPreference
            android:defaultValue="@string/custom_user_agent_default_value"
            android:inputType="textVisiblePassword|textMultiLine"
            android:key="custom_user_agent"
            android:title="@string/custom_user_agent" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="incognito_mode"
            android:summary="@string/incognito_mode_summary"
            android:title="@string/incognito_mode" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="do_not_track"
            android:summary="@string/do_not_track_summary"
            android:title="@string/do_not_track" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_screenshots"
            android:summary="@string/allow_screenshots_summary"
            android:title="@string/allow_screenshots" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="blocklists"
        android:title="@string/blocklists" >

        <SwitchPreference
            android:defaultValue="true"
            android:key="easylist"
            android:summary="@string/easylist_summary"
            android:title="@string/easylist" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="easyprivacy"
            android:summary="@string/easyprivacy_summary"
            android:title="@string/easyprivacy" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="fanboys_annoyance_list"
            android:summary="@string/fanboys_annoyance_list_summary"
            android:title="@string/fanboys_annoyance_list" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="fanboys_social_blocking_list"
            android:summary="@string/fanboys_social_blocking_list_summary"
            android:title="@string/fanboys_social_blocking_list" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="ultralist"
            android:summary="@string/ultralist_summary"
            android:title="@string/ultralist" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="ultraprivacy"
            android:summary="@string/ultraprivacy_summary"
            android:title="@string/ultraprivacy" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="block_all_third_party_requests"
            android:summary="@string/block_all_third_party_requests_summary"
            android:title="@string/block_all_third_party_requests" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="url_modification"
        android:title="@string/url_modification" >

        <SwitchPreference
            android:defaultValue="true"
            android:key="google_analytics"
            android:summary="@string/google_analytics_summary"
            android:title="@string/google_analytics" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="facebook_click_ids"
            android:summary="@string/facebook_click_ids_summary"
            android:title="@string/facebook_click_ids" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="twitter_amp_redirects"
            android:summary="@string/twitter_amp_redirects_summary"
            android:title="@string/twitter_amp_redirects" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="search_category"
        android:title="@string/search" >

        <ListPreference
            android:defaultValue="@string/search_default_value"
            android:entries="@array/search_entries"
            android:entryValues="@array/search_entry_values"
            android:icon="?attr/searchIcon"
            android:key="search"
            android:title="@string/search" />

        <EditTextPreference
            android:defaultValue="@string/search_custom_url_default_value"
            android:inputType="textUri"
            android:key="search_custom_url"
            android:title="@string/search_custom_url" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="proxy_category"
        android:title="@string/proxy" >

        <ListPreference
            android:defaultValue="@string/proxy_default_value"
            android:entries="@array/proxy_entries"
            android:entryValues="@array/proxy_entry_values"
            android:key="proxy"
            android:title="@string/proxy" />

        <EditTextPreference
            android:defaultValue="@string/proxy_custom_url_default_value"
            android:inputType="textUri"
            android:key="proxy_custom_url"
            android:title="@string/proxy_custom_url" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="full_screen"
        android:title="@string/full_screen" >

        <SwitchPreference
            android:defaultValue="false"
            android:key="full_screen_browsing_mode"
            android:summary="@string/full_screen_browsing_mode_summary"
            android:title="@string/full_screen_browsing_mode" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="hide_app_bar"
            android:summary="@string/hide_app_bar_summary"
            android:title="@string/hide_app_bar" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="clear_and_exit"
        android:title="@string/clear_and_exit" >

        <SwitchPreference
            android:defaultValue="true"
            android:key="clear_everything"
            android:summary="@string/clear_everything_summary"
            android:title="@string/clear_everything" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="clear_cookies"
            android:summary="@string/clear_cookies_summary"
            android:title="@string/clear_cookies_preference" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="clear_dom_storage"
            android:summary="@string/clear_dom_storage_summary"
            android:title="@string/clear_dom_storage_preference" />

        <!-- Clear form data can be removed once the minimum API >= 26. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="clear_form_data"
            android:summary="@string/clear_form_data_summary"
            android:title="@string/clear_form_data_preference" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="clear_logcat"
            android:summary="@string/clear_logcat_summary"
            android:title="@string/clear_logcat_preference" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="clear_cache"
            android:summary="@string/clear_cache_summary"
            android:title="@string/clear_cache" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="general"
        android:title="@string/general" >

        <EditTextPreference
            android:defaultValue="@string/homepage_default_value"
            android:icon="?attr/homepageIcon"
            android:inputType="textUri"
            android:key="homepage"
            android:title="@string/homepage" />

        <ListPreference
            android:defaultValue="@string/download_location_default_value"
            android:entries="@array/download_location_entries"
            android:entryValues="@array/download_location_entry_values"
            android:icon="?attr/downloadIcon"
            android:key="download_location"
            android:title="@string/download_location" />

        <EditTextPreference
            android:defaultValue="@string/download_custom_location_default_value"
            android:inputType="textUri"
            android:key="download_custom_location"
            android:title="@string/download_custom_location" />

        <!-- `android:inputType="number"` currently doesn't work with AndroidX. -->
        <EditTextPreference
            android:defaultValue="@string/font_size_default_value"
            android:icon="?attr/fontSizeIcon"
            android:inputType="number"
            android:key="font_size"
            android:title="@string/font_size_preference" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="open_intents_in_new_tab"
            android:summary="@string/open_intents_in_new_tab_summary"
            android:title="@string/open_intents_in_new_tab" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="swipe_to_refresh"
            android:summary="@string/swipe_to_refresh_summary"
            android:title="@string/swipe_to_refresh" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="scroll_app_bar"
            android:summary="@string/scroll_app_bar_summary"
            android:title="@string/scroll_app_bar" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="display_additional_app_bar_icons"
            android:summary="@string/display_additional_app_bar_icons_summary"
            android:title="@string/display_additional_app_bar_icons" />

        <ListPreference
            android:defaultValue="@string/app_theme_default_value"
            android:entries="@array/app_theme_entries"
            android:entryValues="@array/app_theme_entry_values"
            android:icon="?attr/appThemeIcon"
            android:key="app_theme"
            android:title="@string/app_theme" />

        <ListPreference
            android:defaultValue="@string/webview_theme_default_value"
            android:entries="@array/webview_theme_entries"
            android:entryValues="@array/webview_theme_entry_values"
            android:key="webview_theme"
            android:title="@string/webview_theme" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="wide_viewport"
            android:summary="@string/wide_viewport_summary"
            android:title="@string/wide_viewport_preference" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="display_webpage_images"
            android:summary="@string/display_webpage_images_summary"
            android:title="@string/display_webpage_images" />
    </PreferenceCategory>
</PreferenceScreen>