<?xml version="1.0" encoding="utf-8"?>

<!--
    2015-2017,2020

  //

 //



   -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/move_bookmark_up"
        android:orderInCategory="10"
        android:title="@string/move_up"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/move_bookmark_down"
        android:orderInCategory="20"
        android:title="@string/move_down"
        app:showAsAction="ifRoom" />

    <!-- `android:iconTint` can be used once API >= 26 instead of including a separate drawable for each theme. -->
    <item
        android:id="@+id/move_to_folder"
        android:icon="?attr/moveToFolderIcon"
        android:orderInCategory="30"
        android:title="@string/move_to_folder"
        app:showAsAction="ifRoom" />

    <!-- `android:iconTint` can be used once API >= 26 instead of including a separate drawable for each theme. -->
    <item
        android:id="@+id/edit_bookmark"
        android:icon="?attr/editIcon"
        android:orderInCategory="40"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <!-- `android:iconTint` can be used once API >= 26 instead of including a separate drawable for each theme. -->
    <item
        android:id="@+id/delete_bookmark"
        android:icon="?attr/deleteIcon"
        android:orderInCategory="50"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <!-- `android:iconTint` can be used once API >= 26 instead of including a separate drawable for each theme. -->
    <item
        android:id="@+id/context_menu_select_all_bookmarks"
        android:icon="?attr/selectAllIcon"
        android:orderInCategory="60"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
</menu>