<?xml version="1.0" encoding="utf-8"?>

<!--


  //

 //



   -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- `android:iconTint` can be used once the minimum API >= 26 instead of including a separate drawable for each theme. -->
    <item
        android:id="@+id/copy"
        android:icon="?attr/copyIcon"
        android:orderInCategory="10"
        android:title="@string/copy_string"
        app:showAsAction="always" />

    <!-- `android:iconTint` can be used once the minimum API >= 26 instead of including a separate drawable for each theme. -->
    <item
        android:id="@+id/save"
        android:icon="?attr/saveIcon"
        android:orderInCategory="20"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <!-- `android:iconTint` can be used once the minimum API >= 26 instead of including a separate drawable for each theme. -->
    <item
        android:id="@+id/clear"
        android:icon="?attr/closeIcon"
        android:orderInCategory="30"
        android:title="@string/clear"
        app:showAsAction="ifRoom" />
</menu>