<?xml version="1.0" encoding="utf-8"?>

<!--
    2019-2020

  //

 //



   -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical" >

        <!-- Align the edit text and the select file button horizontally. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- The text input layout makes the `android:hint` float above the edit text. -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <!-- `android:inputType="textUri"` disables spell check and places an `/` on the main keyboard. -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/file_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/file_name"
                    android:inputType="textMultiLine|textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/browse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/browse" />
        </LinearLayout>

        <!-- File does not exist warning. -->
        <TextView
            android:id="@+id/file_does_not_exist_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/file_does_not_exist"
            android:textAlignment="center"
            android:textColor="?attr/redTextColor" />

        <!-- Storage permission explanation. -->
        <TextView
            android:id="@+id/storage_permission_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/storage_permission_explanation"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>